# BayDeltaSCHISM

./: .AGENTS.md  .buildinfo  .gitignore  .travis.yml  AGENTS.md  README.md  README_SLR.md  bay_delta_tutorials.html  bdschism.config.html  bdschism.html  bdschism_design.py.txt  calculate_tidal_averaged_salinity_difference_w_visit.py  calibration.html  documentation.html  environment_py39.yml  genindex.html  getmodel.html  help.html  index.html  learning.html  linux.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  reference_simulation.html  refs.html  schism_env.linux.yml  schism_env.win.yml  schism_env.yml  schism_environment.yml  search.html  searchindex.js  setup.cfg  setup.html  setup.py  setup_doc_env_windows.bat  sphinx_env.yml  tests.html  topical_guide.html  (+1 more)
.dvc/: .gitignore  config
.github/: copilot-instructions.md
2dms/: .gitignore  bay_delta.2dm.dvc  bay_delta_2018geom.2dm.dvc  bay_delta_2019geom.2dm.dvc  bay_delta_2020geom.2dm.dvc  bay_delta_2021geom.2dm.dvc  bay_delta_2022geom.2dm.dvc  bay_delta_2023geom.2dm.dvc  bay_delta_2024geom.2dm.dvc  bay_delta_without_loweryolo.2dm.dvc  readme.md
_modules/: index.html  port_boundary.html
_sources/: bdschism.config.rst.txt  bdschism.rst.txt  documentation.rst.txt  getmodel.rst.txt  index.rst.txt  learning.rst.txt  linux.rst.txt  modules.rst.txt  topical_guide.rst.txt  user_guide.rst.txt
bathymetry/: readme.md
bdschism/: .gitattributes  .gitignore  LICENSE  README.md  _version.py  pyproject.toml  setup.cfg  setup.py
bdschism/bdschism/: HSI_Bever_updated.py  __init__.py  __main__.py  _version.py  analyze_dt.py  barrier_status.py  calc_ndoi.py  calculate_14d_salt.py  calculate_depth_average.py  calculate_hsi.py  calculate_hsi2.py  calculate_hsi_area.py  calculate_lsz.py  ccf_gate_height.py  channel_depletion.py  check_nudging_data.py  combine_hotstart.py  combine_nc.py  config.py  config_cli.py  convert_csv_th.py  create_sflux_links.py  create_subregion_nc.py  cruise.py  delta_points.txt  diff_gr3.py  elev2D.bat  extract_x2_station_xyz.py  gen_elev2d.py  gen_lsz_zone_ts.py  generate_realtime_elev2d.py  generate_visit_filelist.py  hotstart_date.py  hotstart_from_hotstart.py  hotstart_nudging_data.py  hotstart_nudging_data.py-ours  hotstart_nudging_data.py-theirs  logging_config.py  make_links_full.py  map_grids.py  (+39 more)
bdschism/bdschism/config/: bds_config.yaml  config.yaml
bdschism/conda.recipe/: meta.yaml
bdschism/scripts/: suisun_marsh_points.txt  x2route.csv  x2route_bay_sac.csv  x2route_bay_suisun.csv
bdschism/tests/: test_ccf_gate_height.py
data/: flow_station_xsects.yaml  flow_station_xsects_new.yaml  obs_links.csv  obs_links_newform_20210204.csv  obs_links_newform_20210204_new.csv  station.in.new  station_dbase.csv  station_flow_xsects.yaml  station_new.in  station_sensor_depths.csv  station_subloc.csv  station_subloc_new.csv  station_utm_mapping.csv  stations_utm.csv  stations_utm_new.csv  stations_utm_prev.csv  usgs_cruise_station.csv  usgs_cruise_station.txt  variable_mappings.csv  variable_table.csv  variables.csv
doc/: chap_conclusion.tex  chap_validate.tex  dcc.th  references.bib  struct_input.tex  structs.tex
docsrc/: Makefile  bay_delta_tutorials.rst  bdschism.rst  conf.py  dms_20221119.bib  dms_20221119b.bib  documentation.rst  getmodel.rst  help.rst  index.rst  learning.rst  linux.rst  make.bat  refs.rst  requirements.txt  topical_guide.rst  user_guide.rst
documents/: bottom_friction_snippet.tex  calibrate_results.tex  calibration_main.tcp  calibration_main.tex  chap_bay_delta_selfe.tex  chap_calibrate.tex  chap_introduction.tex  chap_selfe_description.tex  form_elm.tex  form_hydro.tex  form_transport.tex  form_turbulence.tex  form_wvel.tex  hydraulics.in  nomenclature.tex  struct_input.tex  structs_main.tex  window_build.tex
examples/: .gitignore
mesh/: readme.txt
meta_doc/: doc_click.html  doc_examples.html  doc_mermaid.html  doc_sphinx.html
pyschism/: InputParser.py  Interp2D.py  UnitConversion.py  __init__.py  _version.py  archive_dates.txt  batch_metrics.py  bay_delta_hotstart.f90  bay_delta_hotstart.py  cdec_download.py  cencoos_download.py  check_mesh_skewness.py  clip_dems.py  combine_consume.py  combine_flux.py  contour_smooth.py  convert_linestrings.py  convert_polygons.py  convert_sav_class_to_number.py  create_mesh_n_levels.py  create_vgrid_lsc2.py  cut_mesh.py  dicu_schism.py  download_cdec.py  download_noaa.py  download_nwis.py  download_wdl.py  embed_raster.py  error_detect.py  expand_th.py  gaussian_quadrature.py  gen_elev2D.py  gen_elev2D_py3.py  gen_nu_in.py  gen_nudge.f90  geo_tools.py  gr3.py  grid_opt.py  hotstart_generator.py  interpolate_hotstart.py  (+42 more)
scripts/: HSI_Bever_updated.py  bay_delta_coarse_v4.gr3  cache_mzm_link_points.txt  combine_hotstart.sh  cruise.py  elev2D.bat  extract_time_series.sh  gen_lsz_zone.py  gen_lsz_zone_ts.py  gen_zone_flags.py  gen_zone_flags_hsi.py  generate_sed_th.py  hotstart_get_time_slice.py  hotstart_nudging_data.py  install_docs_extras.py  map_grids.py  multi_clip.py  north_arc_points.txt  port_boundary.py  port_boundary_map.csv  process_x2_ts.py  readme.txt  salinity_14d_average.py  south_delta.bp  suisun_bay_points.txt  suxarray.py  x2_bay_nysjr.bp  x2_bay_sac.bp  x2_stations.bp  x2route_bay_ny_sjr.csv  x2route_bay_sjr.csv
templates/: readme.md
test_suite/: conftest.py  debug.py  design.txt  pytest.ini  readme.md  setup.cfg  test_bay_delta_repo.py  test_elev2d.py  test_nudging.py  test_open_boundary.py  test_sflux.py  test_smscg.py  test_source_sink.py  test_suisun_marsh_gates.py  test_th.py  test_vgrid.py
topics/: age.html  atmospheric.html  azure.html  baroclinic.html  barotropic.html  bds_guide_azure.html  checklists.html  computing_environment.html  files_and_directories.html  flow_boundary.html  helloschism_azure.html  hotstart.html  hpc.html  mesh.html  nudging.html  ocean.html  output.html  overview.html  param.html  preprocess.html  problems.html  processed_run.html  run_tests.html  sea_level_rise.html  sources.html  structures.html  subsetting_time_series.html  utilities.html  vegetation.html  (+2 more)
(+630 files in other folders)
