[build-system]
requires = ["setuptools", "wheel", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "bdschism"
dynamic = ["version"]
description = "Tools for launching and evaluating Bay-Delta SCHISM runs"
license = { text = "MIT" }
authors = [
    { name = "California Department of Water Resources", email = "Eli.Ateljevich@water.ca.gov" }
]
readme = "README.md"
keywords = ["Bay-Delta", "SCHISM", "hydrodynamics"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "bdschism/_version.py"
parentdir_prefix = ""

dependencies = [
    "schimpy",
    "suxarray",
    "vtools",
    "dms_datastore",
    "dynaconf",
    "click",
    "pyproj"
]

[project.optional-dependencies]
doc = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-click",
    "sphinx-design",
    "sphinx-argparse",
    "sphinxcontrib-bibtex",
    "sphinxcontrib-mermaid",
    "myst-parser",
    "numpydoc",
    "pillow>=4.0.0",
    "nbsphinx",
    "docutils"
]
test = [
    "pytest",
    "pytest-cov",
    "tox"
]

[tool.setuptools]
packages = ["bdschism"]
include-package-data = true

[tool.setuptools.package-data]
bdschism = ["config/*.yaml"]

[tool.click]
# This section is not strictly necessary unless you are setting up Click-specific configurations.

[tool.flake8]
max-line-length = 100
ignore = ["E122", "E123", "E126", "E127", "E128", "E731", "E722"]
exclude = ["build", "bdschism/_version.py", "tests", "conda.recipe", ".git", "versioneer.py", "benchmarks", ".asv"]

[tool.pytest.ini_options]
norecursedirs = [".*", "*.egg*", "build", "dist", "conda.recipe"]
addopts = [
    "--junitxml=junit.xml",
    "--ignore=setup.py",
    "--ignore=run_test.py",
    "--tb=native",
    "--strict-markers",
    "--durations=20"
]
markers = [
    "serial: execute test serially (to avoid race conditions)"
]

[project.urls]
Homepage = "https://github.com/CADWRDeltaModeling/BayDeltaSCHISM"

[project.scripts]
bds = "bdschism.__main__:cli"
set_nudge = "bdschism.set_nudging:set_nudging_cli"
hot_from_hot = "bdschism.hotstart_from_hotstart:hotstart_newgrid_cli"
hot_date = "bdschism.hotstart_date:set_hotstart_date_cli"
hot_nudge_data = "bdschism.hotstart_nudging_data:hotstart_nudge_data_cli"
create_nudging = "schimpy.nudging:main"
uv3d = "bdschism.uv3d:interpolate_uv3d_cli"
ccf_gate_height = "bdschism.ccf_gate_height:ccf_gate_cli"
make_links = "bdschism.create_sflux_links:make_links"
calc_ndoi = "bdschism.calc_ndoi:calc_indoi_cli"
parse_cu = "bdschism.parse_cu:parse_cu_cli"
